<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Twitter Client</string>
    <string name="title_activity_timeline">Home Timeline</string>
    <string name="login_label">Login with Twitter</string>
    <string name="title_activity_home_timeline">Home</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sth_wrong">:-O Something went wrong!</string>
    <string name="follow_your_interests">Follow your interests.</string>
    <string name="instant_updates">Instant updates from your friends, industry experts, favorite celebrities, and what\'s happening around the world.</string>
    <string name="new_tweet">Compose</string>
    <string name="new_tweet_hint">What\'s happening?</string>
    <string name="tweet">Tweet</string>
    <string name="internet_error">Please check your internet connection!</string>
    <string name="title_activity_tweet_detail">Tweet</string>
    <string name="retweets">RETWEETS</string>
    <string name="favorites">FAVORITES</string>
    <string name="reply_to">Reply to</string>
    <string name="my_profile">My Profile</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="tweets">TWEETS</string>
    <string name="following">FOLLOWING</string>
    <string name="followers">FOLLOWERS</string>
    <string name="search">Search</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="top_tweets">Top Tweets</string>
    <string name="all_tweets">All Tweets</string>
    <string name="home">Home</string>
    <string name="mentions">Mentions</string>

</resources>