<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_width"
        android:layout_weight="3">

        <ImageView
            android:id="@+id/ivProfileBg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_gray"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"/>
        <ImageView
            android:id="@+id/ivProfPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_launcher"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/white"
            android:paddingTop="@dimen/border"
            android:paddingBottom="@dimen/border"
            android:paddingLeft="@dimen/border"
            android:paddingRight="@dimen/border"/>
        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/ivProfPic"
            android:layout_marginTop="@dimen/prof_pic_margin"
            />
        <TextView
            android:id="@+id/tvScreenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tvUserName"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_width"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:paddingTop="@dimen/profile_header_padding"
        android:divider="@drawable/mydivider"
        android:showDividers="middle">
        <LinearLayout
            android:layout_width="@dimen/zero_width"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingLeft="@dimen/activity_horizontal_margin">
            <TextView
                android:id="@+id/tvTweetCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/tvTweets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/gray"
                android:text="@string/tweets"/>
            </LinearLayout>
            <LinearLayout
            android:layout_width="@dimen/zero_width"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingLeft="@dimen/activity_horizontal_margin">
                <TextView
                    android:id="@+id/tvFollowingCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tvFollowing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:text="@string/following"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="@dimen/zero_width"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingLeft="@dimen/activity_horizontal_margin">
                <TextView
                    android:id="@+id/tvFollowersCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />
                <TextView
                    android:id="@+id/tvFollowers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:text="@string/followers"/>
            </LinearLayout>
        </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="@color/gray"
        android:layout_marginTop="@dimen/home_activity_vertical_margin"
     />

</LinearLayout>